Kafka configured but no docker instance available

--- a/N5ChallengeDockerDemo/appsettings.json
+++ b/N5ChallengeDockerDemo/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "kafka": {
+    "BootstrapServers": "localhost:9092"
+  },
+
   "AllowedHosts": "*"
 }
