--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,18 +39,26 @@ services:
         networks:
         - backend
         ports:
-        - 9200:9200
+        - 9200:9200    
+    
+    zookeeper:
+        image: confluentinc/cp-zookeeper:latest
+        environment:
+          ZOOKEEPER_CLIENT_PORT: 2181
+          ZOOKEEPER_TICK_TIME: 2000
 
     kafka:
-        image: ubuntu/kafka:latest
+        image: confluentinc/cp-kafka
+        depends_on:
+          - zookeeper
         networks:
-        - backend
+          - backend
         ports:
-        - 9092:9092
+          - 9092:9092
         environment:
-        - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
-        - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://localhost:9092
-        - KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
+          KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+          KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
+          KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
     
     
 
